<resources>
    <string name="app_name">Carros Elétricos</string>
    <string name="send">Enviar</string>
    <string name="main_title" translatable="false">Electric Car</string>
    <string name="calcular_autonomia_title">Calcular Autonomia</string>
    <string name="cars">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="price_placeholder">Preço kWh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="result">"Resultado: "</string>
    <string name="car_name" translatable="false">Audi e-tron</string>
    <string name="car_image_description">Foto do carro Audi e-tron</string>
    <string name="price">Preço</string>
    <string name="battery">Bateria</string>
    <string name="potency">Potência</string>
    <string name="recharge">Recarga</string>
    <string name="no_connection">Parece que você está sem internet. Tente novamente mais tarde!</string>
    <string name="no_connection_description">Ícone de WiFi cortado</string>
    <string name="response_error">Algo deu errado. Tente novamente mais tarde!</string>
    <string name="saved_calc" translatable="false">saved_calc</string>
    <string name="star_description">Favorito</string>
    <string name="no_favorites">Você não tem nenhum carro favorito ainda</string>
    <string name="no_favorites_description">Cara triste</string>
</resources>