<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/calcular_autonomia_title"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/price_placeholder"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_kwh" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="8dp"
        android:text="@string/send"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido" />

    <TextView
        android:id="@+id/tv_resultado_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/result"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_enviar" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintLeft_toRightOf="@id/tv_resultado_label"
        app:layout_constraintTop_toBottomOf="@id/btn_enviar" />
</androidx.constraintlayout.widget.ConstraintLayout>